web-infras/parser/tests/fixtures/esprima/ES6/yield/invalid-yield-generator-arrow-default/output.txt
[SyntaxError]: yield expression can not used in parameter list (1,22)
1|function* g() { (x = yield 42) => {} }
 |                    ^
